--- a/Changes
+++ b/Changes
@@ -3,7 +3,8 @@ Revision history for the module "Bin::File::Dir" :
 0.200   2021-05-26
         最初に作成。何個かのコマンドを提供する。
 
- 
+0.201   2021-05-26
+        READMEが別のモジュールのものだったので変更。 
 
 
 
